# dotfiles

./: .gitignore  .stow-local-ignore  .zshrc  README.md  mprisence  scripts
.config/fastfetch/: ascii.txt  config.jsonc
.config/herdr/: config.toml
.config/hypr/: .gitignore  colors-hyprland.conf  hyprland.conf  hyprland.lua  hyprsunset.conf  monitors.conf  monitors.lua
.config/kitty/: colors-kitty.conf  kitty.conf
.config/matugen/: config.toml  test.json  test.toml  themed.toml
.config/mprisence/: config.toml
.config/niri/: config.kdl
.config/nvim/: .gitignore  generated.lua  init.lua  lazy-lock.json  lazyvim.json  nvim  nvim-pack-lock.json  theme.lua
.config/nvim.bak/: init.lua  lazy-lock.json
.config/nvim.nvchad/: lazy-lock.json
.config/quickshell/: .gitignore  .qmlls.ini  Appearance.qml  GlobalState.qml  TODO_INTEGRATION.md  appearance.json  config.json  notification.json  qtquickcontrols2.conf  settings.json  shell.qml  test.qml
.config/quickshell/reshell/core/cli/: Cargo.toml  flake.nix  justfile
.config/quickshell/reshell/core/cli/src/: lib.rs  main.rs
.config/quickshell/reshell/core/cli/src/modules/: compositor.rs  hardware.rs  mod.rs  rules.rs  shell.rs  weather.rs
.config/rmpc/: config.ron
.config/rmpcd/: .luarc.json  init.lua
Scripts/: music-player.zsh  randomize-image.zsh  select-wallpaper.zsh
Via/: inky75.layout.json
keyboard/: corne.json
moondrop hub/: eq.txt
nixos/: configuration.nix  flake.nix  hardware-configuration.nix  home.nix  result
qml/: MixerEntry.qml  shell.qml
waybar/: personal.jsonc
(+686 files in other folders)
