[package]
name = "quickcli"
version = "0.1.0"
edition = "2024"

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
daemonize = "0.5.0"
gfxinfo = "0.1.2"
niri-ipc = "26.4.0"
serde_json = "1.0"
sysinfo = "0.38.2"
kdl = "6.5.0"
urlencoding = "2.1.3"
reqwest = { version = "0.13.1", features = ["blocking"] }
knuffel = "3.2"
ctrlc = "3.2"
rfd = "0.15"
strum = { version = "0.26", features = ["derive"] }
